# tshock-tg-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.example.yml  main.py  pyproject.toml
callback_factories/: callback_factories.py
config/: configreader.py
filters/: auth.py
handlers/: authorization.py  default_commands.py  language_reselection.py  main_menu.py  server_section.py  tokens_section.py  users_section.py
keyboards/: default_menu.py  keyboard_utils.py  keyboards.py
lexicon/: lexicon.py
lexicon/auth/: menus.py  message_texts.py
lexicon/default/: menus.py  message_texts.py
lexicon/language/: menus.py  message_texts.py
lexicon/server_section/: menus.py  message_texts.py
lexicon/tokens_section/: menus.py  message_texts.py
lexicon/users_section/: menus.py  message_texts.py
middlewares/: language.py  token_test.py  user_data.py
models/: methods.py  models.py
services/: api_requests.py  services.py
states/: states.py
tests/: test_services.py
