[tool.poetry]
name = "tshock-tg-admin"
version = "1.0.0"
description = ""
authors = ["montaque <likamaksim@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.16"
redis = "^4.5.5"
asyncpg = "^0.27.0"
aiogram = ">=3.0.0b7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
